<resources>
    <string name="app_name">Intents</string>
    <string name="abrirPagWeb">ABRIR PÁGINA WEB</string>
    <string name="llamadaTelf">LLAMADA DE TELEFONO</string>
    <string name="googleMaps">GOOGLE MAPS</string>
    <string name="hacerFoto">HACER FOTO</string>
    <string name="mandarCorreo">MANDAR CORREO</string>
    <string name="busqueda">BÚSQUEDA WEB</string>
    <string name="dialer">DIALER DE TELÉFONO</string>
    <string name="street">STREET VIEW</string>
    <string name="compartir">COMPARTIR CON ... </string>
</resources>
