<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fran.intents.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">
        <Button
            android:id="@+id/button01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/abrirPagWeb"
            android:onClick="pgWeb"/>
        <Button
            android:id="@+id/button02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/llamadaTelf"
            android:onClick="llamadaTelefono"/>
        <Button
            android:id="@+id/button03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/googleMaps"
            android:onClick="googleMaps"/>
        <Button
            android:id="@+id/button04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hacerFoto"
            android:onClick="hacerFoto"/>
        <Button
            android:id="@+id/button05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mandarCorreo"
            android:onClick="mandarCorreo"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
